Added new email: reminder for unpaid rents

--- a/templates/rentcall_reminder/body_text.ejs
+++ b/templates/rentcall_reminder/body_text.ejs
@@ -19,9 +19,9 @@
 
 Bonjour,
 
-Je vous prie de bien vouloir trouver ci-joint votre avis d'échéance pour la periode de <%= period %>.
+Sauf erreur de notre part, nous vous informons que nous sommes toujours en attente du règlement de votre loyer du mois de <%= period %>.
 
-Le montant de votre loyer est de <%= tenant.rents[0].total.grandTotal.toFixed(2) %> euros à nous faire parvenir avant le <%= dueDate %>.
+Nous vous remercions de bien vouloir procéder au paiement de la somme de <%= tenant.rents[0].total.grandTotal.toFixed(2) %> euros dans les plus brefs delais.
 
 Ci-dessous les modalités de paiement :
 
