support of en-US and fr-FR emails

--- a/lib/emailparts/contents/invoice/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/invoice/fr-FR/body_text.ejs
@@ -25,7 +25,7 @@ Veuillez trouver ci-joint la quittance du mois de <%- period %>.
 
 En vous souhaitant bonne récéption.
 
-Bien Cordialement,
+Cordialement,
 
 <%-localContext.landloard%>
 <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
