--- a/lib/emailparts/contents/rentcall/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/rentcall/fr-FR/body_text.ejs
@@ -19,21 +19,24 @@
 
 Bonjour,
 
-Sauf erreur de notre part, nous vous informons que nous sommes toujours en attente du règlement de votre loyer du mois de <%- period %>.
+Je vous prie de bien vouloir trouver ci-joint votre avis d'échéance pour la periode de <%- period %>.
 
-Nous vous remercions de bien vouloir procéder au paiement de la somme de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros dans les plus brefs delais.
+Le montant de votre loyer est de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros à nous faire parvenir avant le <%- dueDate %>.
 
 Ci-dessous les modalités de paiement :
 
 Par virement bancaire
 Nos coordonnées bancaires
-Banque populaire IBAN : <%-tenant.realm.rib%>
+<%- tenant.realm.bank %>
+IBAN : <%-tenant.realm.rib%>
 
 Par chèque bancaire ou postal
 Etablissez votre chèque à l'ordre de <%-localContext.landloard%> et à envoyer à l'adresse suivante :
 <%-localContext.landloard%>
 <%-tenant.realm.street1%>
-<%if (tenant.realm.street2)%><%-tenant.realm.street2%>
+<%if (tenant.realm.street2) {-%>
+    <%-tenant.realm.street2%>
+<%}-%>
 <%-tenant.realm.zipCode%> <%-tenant.realm.city%>
 
 Par espèce
@@ -43,7 +46,7 @@ Par E-mail à <%-tenant.realm.email%>
 
 Nous restons à votre disposition pour tout complément d'information.
 
-Bien Cordialement,
+Cordialement,
 
 <%-localContext.landloard%>
 <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
