--- a/lib/emailparts/contents/rentcall_last_reminder/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/rentcall_last_reminder/fr-FR/body_text.ejs
@@ -17,23 +17,30 @@
 
 
 
-Bonjour,
+Madame, Monsieur,
 
-Je vous prie de bien vouloir trouver ci-joint votre avis d'échéance pour la periode de <%- period %>.
+Nous vous rappelons que nos relations commerciales avec <%if (tenant.realm.isCompany) { %>votre société<% } else { %>vous<% } %> sont liées par un bail signé le <%- tenant.beginDate %>.
 
-Le montant de votre loyer est de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros à nous faire parvenir avant le <%- dueDate %>.
+Dans ce bail, il est explicitement indiqué que <%- tenant.name %> s'oblige à payer d'avance, la location d'un ou plusieurs bureaux, à la société <%- tenant.realm.legalForm + ' ' + localContext.landloard %>, tous les mois, le premier jour de chaque mois (chapitre Loyers - article II)
+
+Or, à ce jour, un ou plusieurs loyers n'ont pas été réglés représentant un montant de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros.
+
+Nous vous remercions de bien vouloir procéder au paiement de vos loyers dans les 10 jours suivants cet email sous peine de demande de recouvrement par un huissier de justice.
 
 Ci-dessous les modalités de paiement :
 
 Par virement bancaire
 Nos coordonnées bancaires
-Banque populaire IBAN : <%-tenant.realm.rib%>
+<%- tenant.realm.bank %>
+IBAN : <%-tenant.realm.rib%>
 
 Par chèque bancaire ou postal
 Etablissez votre chèque à l'ordre de <%-localContext.landloard%> et à envoyer à l'adresse suivante :
 <%-localContext.landloard%>
 <%-tenant.realm.street1%>
-<%if (tenant.realm.street2)%><%-tenant.realm.street2%>
+<%if (tenant.realm.street2) {-%>
+    <%-tenant.realm.street2%>
+<%}-%>
 <%-tenant.realm.zipCode%> <%-tenant.realm.city%>
 
 Par espèce
@@ -43,7 +50,7 @@ Par E-mail à <%-tenant.realm.email%>
 
 Nous restons à votre disposition pour tout complément d'information.
 
-Bien Cordialement,
+Cordialement,
 
 <%-localContext.landloard%>
 <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
