--- a/lib/emailparts/contents/rentcall_reminder/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/rentcall_reminder/fr-FR/body_text.ejs
@@ -17,27 +17,26 @@
 
 
 
-Madame, Monsieur,
+Bonjour,
 
-Nous vous rappelons que nos relations commerciales avec votre société sont liées par un bail signé le <%- tenant.beginDate %>.
+Sauf erreur de notre part, nous vous informons que nous sommes toujours en attente du règlement de votre loyer du mois de <%- period %>.
 
-Dans ce bail, il est explicitement indiqué que <%- tenant.name %> s'oblige à payer d'avance, la location d'un ou plusieurs bureaux, à la société <%- tenant.realm.legalForm + ' ' + localContext.landloard %>, tous les mois, le premier jour de chaque mois (chapitre Loyers - article II)
-
-Or, à ce jour, un ou plusieurs loyers n'ont pas été réglés représentant un montant de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros.
-
-Nous vous remercions de bien vouloir procéder au paiement de vos loyers dans les 10 jours suivants cet email sous peine de demande de recouvrement par un huissier de justice.
+Nous vous remercions de bien vouloir procéder au paiement de la somme de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros dans les plus brefs delais.
 
 Ci-dessous les modalités de paiement :
 
 Par virement bancaire
 Nos coordonnées bancaires
-Banque populaire IBAN : <%-tenant.realm.rib%>
+<%- tenant.realm.bank %>
+IBAN : <%-tenant.realm.rib%>
 
 Par chèque bancaire ou postal
 Etablissez votre chèque à l'ordre de <%-localContext.landloard%> et à envoyer à l'adresse suivante :
 <%-localContext.landloard%>
 <%-tenant.realm.street1%>
-<%if (tenant.realm.street2)%><%-tenant.realm.street2%>
+<%if (tenant.realm.street2) {-%>
+    <%-tenant.realm.street2%>
+<%}-%>
 <%-tenant.realm.zipCode%> <%-tenant.realm.city%>
 
 Par espèce
@@ -47,7 +46,7 @@ Par E-mail à <%-tenant.realm.email%>
 
 Nous restons à votre disposition pour tout complément d'information.
 
-Bien Cordialement,
+Cordialement,
 
 <%-localContext.landloard%>
 <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
