--- a/lib/emailparts/contents/invoice/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/invoice/fr-FR/body_text.ejs
@@ -1,10 +1,9 @@
-<%var localContext = {landloard : tenant.realm.isCompany ? tenant.realm.company : tenant.realm.manager}-%>
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-<%-tenant.realm.street2%>
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+<%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 
 
@@ -27,6 +26,6 @@ En vous souhaitant bonne récéption.
 
 Cordialement,
 
-<%-localContext.landloard%>
-<%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
-<%-tenant.realm.email%>
+<%-landlord.name%>
+<%-landlord.phone1%><%if (landlord.phone2)%> / <%-landlord.phone2%>
+<%-landlord.email%>
