--- a/lib/emailparts/contents/rentcall_last_reminder/en-US/body_text.ejs
+++ b/lib/emailparts/contents/rentcall_last_reminder/en-US/body_text.ejs
@@ -1,10 +1,9 @@
-<%var localContext = {landloard : tenant.realm.isCompany ? tenant.realm.company : tenant.realm.manager}-%>
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-<%-tenant.realm.street2%>
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+<%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 
 
@@ -19,9 +18,9 @@
 
 Hello,
 
-We would like to point out that our business relations with <%if (tenant.realm.isCompany) { %>your company<% } else { %>you<% } %> are stated in a contract signed <%- tenant.beginDate %>.
+We would like to point out that our business relations with <%if (landlord.isCompany) { %>your company<% } else { %>you<% } %> are stated in a contract signed <%- tenant.beginDate %>.
 
-In this contract, it is explicitly indicated that <%- tenant.name %> is obliged to pay in advance and monthly its rents to <%- tenant.realm.legalForm + ' ' + localContext.landloard %>.
+In this contract, it is explicitly indicated that <%- tenant.name %> is obliged to pay in advance and monthly its rents to <%- landlord.legalForm + ' ' + landlord.name %>.
 
 Although, until now, one or more rents are not settled. The amount of unpaid rents is €<%- tenant.rents[0].total.grandTotal.toFixed(2) %>.
 
@@ -31,27 +30,27 @@ Payment modalities:
 
 By bank transfer
 Bank details
-<%- tenant.realm.bank %>
-IBAN : <%-tenant.realm.rib%>
+<%- landlord.bank %>
+IBAN : <%-landlord.rib%>
 
 By bank cheque
-Write your cheque to the order of <%-localContext.landloard%> and send it to the following address:
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-    <%-tenant.realm.street2%>
+Write your cheque to the order of <%-landlord.name%> and send it to the following address:
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+    <%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 By cash
-Contact <%-tenant.realm.contact%>
-Phone: <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> ou au <%-tenant.realm.phone2%>
-Email: <%-tenant.realm.email%>
+Contact <%-landlord.contact%>
+Phone: <%-landlord.phone1%><%if (landlord.phone2)%> ou au <%-landlord.phone2%>
+Email: <%-landlord.email%>
 
 We are at your service for any further information you may need.
 
 Regards,
 
-<%-localContext.landloard%>
-<%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
-<%-tenant.realm.email%>
+<%-landlord.name%>
+<%-landlord.phone1%><%if (landlord.phone2)%> / <%-landlord.phone2%>
+<%-landlord.email%>
