--- a/lib/emailparts/contents/rentcall_last_reminder/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/rentcall_last_reminder/fr-FR/body_text.ejs
@@ -1,10 +1,9 @@
-<%var localContext = {landloard : tenant.realm.isCompany ? tenant.realm.company : tenant.realm.manager}-%>
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-<%-tenant.realm.street2%>
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+<%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 
 
@@ -19,9 +18,9 @@
 
 Madame, Monsieur,
 
-Nous vous rappelons que nos relations commerciales avec <%if (tenant.realm.isCompany) { %>votre société<% } else { %>vous<% } %> sont liées par un bail signé le <%- tenant.beginDate %>.
+Nous vous rappelons que nos relations commerciales avec <%if (landlord.isCompany) { %>votre société<% } else { %>vous<% } %> sont liées par un bail signé le <%- tenant.beginDate %>.
 
-Dans ce bail, il est explicitement indiqué que <%- tenant.name %> s'oblige à payer d'avance, la location d'un ou plusieurs bureaux, à la société <%- tenant.realm.legalForm + ' ' + localContext.landloard %>, tous les mois, le premier jour de chaque mois (chapitre Loyers - article II)
+Dans ce bail, il est explicitement indiqué que <%- tenant.name %> s'oblige à payer d'avance, la location d'un ou plusieurs bureaux, à la société <%- landlord.legalForm + ' ' + landlord.name %>, tous les mois, le premier jour de chaque mois (chapitre Loyers - article II)
 
 Or, à ce jour, un ou plusieurs loyers n'ont pas été réglés représentant un montant de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros.
 
@@ -31,27 +30,27 @@ Ci-dessous les modalités de paiement :
 
 Par virement bancaire
 Nos coordonnées bancaires
-<%- tenant.realm.bank %>
-IBAN : <%-tenant.realm.rib%>
+<%- landlord.bank %>
+IBAN : <%-landlord.rib%>
 
 Par chèque bancaire ou postal
-Etablissez votre chèque à l'ordre de <%-localContext.landloard%> et à envoyer à l'adresse suivante :
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-    <%-tenant.realm.street2%>
+Etablissez votre chèque à l'ordre de <%-landlord.name%> et à envoyer à l'adresse suivante :
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+    <%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 Par espèce
-Contactez <%-tenant.realm.contact%>
-Par téléphone au <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> ou au <%-tenant.realm.phone2%>
-Par E-mail à <%-tenant.realm.email%>
+Contactez <%-landlord.contact%>
+Par téléphone au <%-landlord.phone1%><%if (landlord.phone2)%> ou au <%-landlord.phone2%>
+Par E-mail à <%-landlord.email%>
 
 Nous restons à votre disposition pour tout complément d'information.
 
 Cordialement,
 
-<%-localContext.landloard%>
-<%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
-<%-tenant.realm.email%>
+<%-landlord.name%>
+<%-landlord.phone1%><%if (landlord.phone2)%> / <%-landlord.phone2%>
+<%-landlord.email%>
