--- a/lib/emailparts/contents/rentcall_reminder/en-US/body_text.ejs
+++ b/lib/emailparts/contents/rentcall_reminder/en-US/body_text.ejs
@@ -1,10 +1,9 @@
-<%var localContext = {landloard : tenant.realm.isCompany ? tenant.realm.company : tenant.realm.manager}-%>
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-<%-tenant.realm.street2%>
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+<%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 
 
@@ -27,27 +26,27 @@ Payment modalities:
 
 By bank transfer
 Bank details
-<%- tenant.realm.bank %>
-IBAN : <%-tenant.realm.rib%>
+<%- landlord.bank %>
+IBAN : <%-landlord.rib%>
 
 By bank cheque
-Write your cheque to the order of <%-localContext.landloard%> and send it to the following address:
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-    <%-tenant.realm.street2%>
+Write your cheque to the order of <%-landlord.name%> and send it to the following address:
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+    <%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 By cash
-Contact <%-tenant.realm.contact%>
-Phone: <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> ou au <%-tenant.realm.phone2%>
-Email: <%-tenant.realm.email%>
+Contact <%-landlord.contact%>
+Phone: <%-landlord.phone1%><%if (landlord.phone2)%> ou au <%-landlord.phone2%>
+Email: <%-landlord.email%>
 
 We are at your service for any further information you may need.
 
 Regards,
 
-<%-localContext.landloard%>
-<%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
-<%-tenant.realm.email%>
+<%-landlord.name%>
+<%-landlord.phone1%><%if (landlord.phone2)%> / <%-landlord.phone2%>
+<%-landlord.email%>
