--- a/lib/emailparts/contents/rentcall_reminder/fr-FR/body_text.ejs
+++ b/lib/emailparts/contents/rentcall_reminder/fr-FR/body_text.ejs
@@ -1,10 +1,9 @@
-<%var localContext = {landloard : tenant.realm.isCompany ? tenant.realm.company : tenant.realm.manager}-%>
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-<%-tenant.realm.street2%>
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+<%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 
 
@@ -27,27 +26,27 @@ Ci-dessous les modalités de paiement :
 
 Par virement bancaire
 Nos coordonnées bancaires
-<%- tenant.realm.bank %>
-IBAN : <%-tenant.realm.rib%>
+<%- landlord.bank %>
+IBAN : <%-landlord.rib%>
 
 Par chèque bancaire ou postal
-Etablissez votre chèque à l'ordre de <%-localContext.landloard%> et à envoyer à l'adresse suivante :
-<%-localContext.landloard%>
-<%-tenant.realm.street1%>
-<%if (tenant.realm.street2) {-%>
-    <%-tenant.realm.street2%>
+Etablissez votre chèque à l'ordre de <%-landlord.name%> et à envoyer à l'adresse suivante :
+<%-landlord.name%>
+<%-landlord.street1%>
+<%if (landlord.street2) {-%>
+    <%-landlord.street2%>
 <%}-%>
-<%-tenant.realm.zipCode%> <%-tenant.realm.city%>
+<%-landlord.zipCode%> <%-landlord.city%>
 
 Par espèce
-Contactez <%-tenant.realm.contact%>
-Par téléphone au <%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> ou au <%-tenant.realm.phone2%>
-Par E-mail à <%-tenant.realm.email%>
+Contactez <%-landlord.contact%>
+Par téléphone au <%-landlord.phone1%><%if (landlord.phone2)%> ou au <%-landlord.phone2%>
+Par E-mail à <%-landlord.email%>
 
 Nous restons à votre disposition pour tout complément d'information.
 
 Cordialement,
 
-<%-localContext.landloard%>
-<%-tenant.realm.phone1%><%if (tenant.realm.phone2)%> / <%-tenant.realm.phone2%>
-<%-tenant.realm.email%>
+<%-landlord.name%>
+<%-landlord.phone1%><%if (landlord.phone2)%> / <%-landlord.phone2%>
+<%-landlord.email%>
