partial fix for https://github.com/microrealestate/microrealestate/issues/40

--- a/src/emailparts/contents/reset_password/fr-FR/body_text.ejs
+++ b/src/emailparts/contents/reset_password/fr-FR/body_text.ejs
@@ -1,6 +1,6 @@
 Bonjour <%- firstname %>,
 
-Vous avez demandé unee réinitialisation de mot de passe de votre compte <%- config.APP_NAME %>.
+Vous avez demandé une réinitialisation de mot de passe de votre compte <%- config.APP_NAME %>.
 
 Cliquez sur le lien pour créer un nouveau mot de passe :
 
