--- a/src/emailparts/contents/rentcall/fr-FR/subject.ejs
+++ b/src/emailparts/contents/rentcall/fr-FR/subject.ejs
@@ -1,1 +1,1 @@
-Votre avis d'échéance du mois de <%= period %>
+Votre avis d'échéance du mois de <%- _.formatTerm(period, tenant.contract.lease.timeRange) %>
