--- a/src/emailparts/contents/rentcall_last_reminder/fr-FR/body_text.ejs
+++ b/src/emailparts/contents/rentcall_last_reminder/fr-FR/body_text.ejs
@@ -1,4 +1,5 @@
 <%-landlord.name%>
+<% if (landlord.hasAddress) { -%>
 <%-landlord.addresses[0].street1%>
 <%if (landlord.addresses[0].street2) {-%>
 <%-landlord.addresses[0].street2%>
@@ -9,6 +10,7 @@
 <%}-%>
 <%if (landlord.addresses[0].country) {-%>
 <%-landlord.addresses[0].country%>
+<%}-%>
 <%}-%>
 
 
@@ -23,11 +25,11 @@
 
 Madame, Monsieur,
 
-Nous vous rappelons que nos relations commerciales avec <%if (landlord.isCompany) { %>votre société<% } else { %>vous<% } %> sont liées par un bail signé le <%- tenant.beginDate %>.
+Nous vous rappelons que nos relations commerciales avec <%if (landlord.isCompany) { %>votre société<% } else { %>vous<% } %> sont liées par un bail signé le <%- _.formatDate(tenant.contract.beginDate, 'LL') %>.
 
-Dans ce bail, il est explicitement indiqué que <%- tenant.name %> s'oblige à payer d'avance, la location d'un ou plusieurs bureaux, à la société <%- landlord.legalForm + ' ' + landlord.name %>, tous les mois, le premier jour de chaque mois (chapitre Loyers - article II)
+Dans ce bail, il est explicitement indiqué que <%- tenant.name %> s'oblige à payer d'avance, la location d'un ou plusieurs bureaux, à la société <%- landlord.name + ' ' + (landlord.hasCompanyInfo ? landlord.companyInfo.legalStructure : '') %>, tous les mois, le premier jour de chaque mois (chapitre Loyers - article II)
 
-Or, à ce jour, un ou plusieurs loyers n'ont pas été réglés représentant un montant de <%- tenant.rents[0].total.grandTotal.toFixed(2) %> euros.
+Or, à ce jour, un ou plusieurs loyers n'ont pas été réglés représentant un montant de <%- _.formatNumber(tenant.rents[0].total.grandTotal, 'currency') %>.
 
 Nous vous remercions de bien vouloir procéder au paiement de vos loyers dans les 10 jours suivants cet email sous peine de demande de recouvrement par un huissier de justice.
 
@@ -35,12 +37,15 @@ Ci-dessous les modalités de paiement :
 
 Par virement bancaire
 Nos coordonnées bancaires
+<% if (landlord.hasBankInfo) { -%>
 <%- landlord.bankInfo.name %>
 IBAN : <%-landlord.bankInfo.iban%>
+<%}-%>
 
 Par chèque bancaire ou postal
 Etablissez votre chèque à l'ordre de <%-landlord.name%> et à envoyer à l'adresse suivante :
 <%-landlord.name%>
+<% if (landlord.hasAddress) { -%>
 <%-landlord.addresses[0].street1%>
 <%if (landlord.addresses[0].street2) {-%>
 <%-landlord.addresses[0].street2%>
@@ -52,16 +57,19 @@ Etablissez votre chèque à l'ordre de <%-landlord.name%> et à envoyer à l'adr
 <%if (landlord.addresses[0].country) {-%>
 <%-landlord.addresses[0].country%>
 <%}-%>
+<%}-%>
 
 Par espèce
-Contactez <%-landlord.contacts[0].name%>
-Par téléphone au <%-landlord.contacts[0].phone1%><%if (landlord.contacts[0].phone2)%> - <%-landlord.contacts[0].phone2%>
-Par E-mail à <%-landlord.contacts[0].email%>
+Contactez <%-landlord.hasContact ? landlord.contacts[0].name : ''%>
+Par téléphone au <%-landlord.hasContact ? landlord.contacts[0].phone1 : ''%><% landlord.hasContact && landlord.contacts[0].phone2 ? ' / ' + landlord.contacts[0].phone2 : '' %>
+Par E-mail à <%-landlord.hasContact ? landlord.contacts[0].email : ''%>
 
 Nous restons à votre disposition pour tout complément d'information.
 
 Cordialement,
 
 <%-landlord.name%>
+<% if (landlord.hasContact) { -%>
 <%-landlord.contacts[0].phone1%><%if (landlord.contacts[0].phone2) {%> / <%-landlord.contacts[0].phone2%> <%}%>
 <%-landlord.contacts[0].email%>
+<%}-%>
