--- a/src/emailparts/contents/invoice/en/body_text.ejs
+++ b/src/emailparts/contents/invoice/en/body_text.ejs
@@ -1,4 +1,5 @@
 <%-landlord.name%>
+<% if (landlord.hasAddress) { -%>
 <%-landlord.addresses[0].street1%>
 <%if (landlord.addresses[0].street2) {-%>
 <%-landlord.addresses[0].street2%>
@@ -9,6 +10,7 @@
 <%}-%>
 <%if (landlord.addresses[0].country) {-%>
 <%-landlord.addresses[0].country%>
+<%}-%>
 <%}-%>
 
 
@@ -23,12 +25,14 @@
 
 Hello,
 
-We thank you for your settlement.
+Thank you for your settlement.
 
-Please find in attachment the rent receipt for <%- period %>.
+Please find in attachment the rent invoice of <%- _.formatTerm(period, tenant.contract.lease.timeRange) %>.
 
-Regards,
+Kind regards,
 
-<%-landlord.name%>
+<%-landlord.name %>
+<% if (landlord.hasContact) { -%>
 <%-landlord.contacts[0].phone1%><%if (landlord.contacts[0].phone2) {%> / <%-landlord.contacts[0].phone2%> <%}%>
 <%-landlord.contacts[0].email%>
+<%}-%>
