--- a/src/emailparts/contents/rentcall_last_reminder/fr-FR/subject.ejs
+++ b/src/emailparts/contents/rentcall_last_reminder/fr-FR/subject.ejs
@@ -1,1 +1,1 @@
-DERNIER RAPPEL AVANT HUISSIER : loyers impayés au mois de <%= period %>
+DERNIER RAPPEL AVANT HUISSIER : loyers impayés au mois de <%- _.formatTerm(period, tenant.contract.lease.timeRange) %>
