--- a/src/emailparts/contents/rentcall_reminder/fr-FR/subject.ejs
+++ b/src/emailparts/contents/rentcall_reminder/fr-FR/subject.ejs
@@ -1,1 +1,1 @@
-RAPPEL : loyers impayés au mois de <%= period %>
+RAPPEL : loyers impayés au mois de <%- _.formatTerm(period, tenant.contract.lease.timeRange) %>
